<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CrypTalker</string>

    <!-- App Toast -->
    <string name="no_internet_connection">Failed to connect. Network is unreachable</string>
    <string name="no_apk">You need to install Android Google Play</string>
    <!-- /App Toast -->

    <!-- Progress dialog -->
    <string name="dialog_progress_default_title">Loading</string>
    <string name="dialog_progress_default_message">Loading</string>
    <string name="dialog_progress_create_account_message">Account creation</string>
    <string name="dialog_progress_login_message">Login</string>
    <string name="dialog_progress_add_friend_message">Sending invitation</string>
    <string name="dialog_progress_accept_friend_message">Accepting invitation</string>
    <string name="dialog_progress_refuse_friend_message">Refusing invitation</string>
    <!-- /Progress dialog -->

    <!-- Dialog add friend -->
    <string name="dialog_add_friend_title">Add friend</string>
    <string name="dialog_add_friend_pseudo">Pseudo</string>
    <string name="dialog_add_friend_positive_button">Add</string>
    <string name="dialog_add_friend_negative_button">Cancel</string>
    <string name="dialog_add_friend_success">An invitation request was sent to your friend</string>
    <!-- /Dialog -->

    <!-- Inputs validation -->
    <string name="validation_input_required">This input is required</string>
    <!-- /Inputs validation -->

    <!-- Action Bar -->
    <string name="action_add_person">New friend request</string>
    <string name="action_chat">New friend request</string>
    <string name="action_add_person_to_room">Add a friend to the chat</string>
    <string name="action_parameter">Parameters</string>
    <!-- /Action Bar -->

    <!-- activity_dispatcher -->
    <string name="dispatcher_loading">Loading…</string>
    <string name="dispatcher_reload">Reload</string>
    <!-- activity_dispatcher -->

    <!-- activity_home -->
    <string name="home_catch_phrase">A new kind of secure messaging app</string>
    <string name="home_login">Login</string>
    <string name="home_register">Register</string>
    <!-- /activity_home -->

    <!-- activity_login -->
    <string name="login_header_title">LOGIN</string>
    <string name="login_login">Login</string>
    <string name="login_pseudo">Pseudo</string>
    <string name="login_pseudo_or_email">Pseudo or Email</string>
    <string name="login_password">Password</string>
    <string name="login_register">Register</string>
    <!-- /activity_login -->

    <!-- activity_create_account -->
    <string name="create_account_header_title">REGISTER</string>
    <string name="create_account_login">Login</string>
    <string name="create_account_register">Register</string>
    <string name="create_account_email">Email</string>
    <string name="create_account_pseudo">Pseudo</string>
    <string name="create_account_password">Password</string>
    <string name="create_account_password_confirmation">Password confirmation</string>
    <!-- /activity_create_account -->

    <!-- activity_dashboard -->
    <string name="dashboard_title">CrypTalker</string>
    <string name="dashboard_catch_phrase">Welcome to CrypTalker!</string>
    <string name="dashboard_tab_contacts">Contacts</string>
    <string name="dashboard_tab_friend_request_received">Friends request received</string>
    <string name="dashboard_tab_friend_request_sended">Friends request sent</string>
    <string name="dashboard_row_invite_accept">Accept</string>
    <string name="dashboard_row_invite_deny">Deny</string>
    <string name="dashboard_row_invite_explanation">sent you a friend request</string>
    <string name="dashboard_tab_friend_request_accepted">You accepted the friend request</string>
    <string name="dashboard_tab_friend_request_deny">You refused the friend request</string>
    <!-- activity_dashboard -->

    <!-- activity_chat -->
    <string name="chat_new_message">Enter your text here</string>
    <string name="chat_new_message_send">Send a new message</string>
    <string name="chat_new_message_pending">Sending…</string>
    <string name="chat_new_message_fail">Failure! click to try sending again</string>
    <!-- /activity_chat -->

    <!-- Parameters -->
    <string name="parameter_header_title">Parameters</string>
    <!-- /Parameters -->
    
</resources>
