<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/dashboard_row_layout"
                android:orientation="horizontal">

    <TextView
            android:id="@+id/name"
            style="@style/dashboard_row_name"
            android:singleLine="true"/>

    <TextView
            android:id="@+id/last_message"
            style="@style/dashboard_row_last_message"
            android:layout_alignBaseline="@id/name"
            android:layout_toEndOf="@id/name"
            android:text="@string/dashboard_row_invite_explanation"/>

    <Button
            android:id="@+id/request_accept"
            style="@style/dashboard_half_button"
            android:layout_below="@id/name"
            android:hint="@string/dashboard_row_invite_accept"/>

    <Button
            android:id="@+id/request_deny"
            style="@style/dashboard_half_button_red"
            android:layout_alignBaseline="@id/request_accept"
            android:layout_toEndOf="@id/request_accept"
            android:hint="@string/dashboard_row_invite_deny"/>

</RelativeLayout>
